Refactor trading signal metrics to use `live_price` and enhance Grafana dashboard with localized labels, null span support, and updated LogQL expressions. Bump version to 1.0.7.